# RubikSolver

./: CMakeLists.txt  README.md
include/: ColorDetector.h  CubeScanner.h  CubeSolver.h
kociemba/: search.c  solve.c
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: ColorDetector.cpp  Cube  Cube.cpp  CubeScanner.cpp  CubeSolver.cpp  main.cpp
